creusot/tests/should_fail/bug/436_0.stderr
error: called Logic { prophetic: true } function in Logic { prophetic: false } context "prophecy"
  --> 436_0.rs:15:23
   |
15 |     b.g = snapshot! { prophecy(b) + 1i32 };
   |                       ^^^^^^^^

error: aborting due to 1 previous error

